syntax = "proto2";

package com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto;

option java_outer_classname = "JavaProjectProto";

import "File.proto";
import "Library.proto";

message JavaProject {
    optional string name = 1; // required
    optional JavaSourceSet main_source_set = 2; // required
    optional JavaSourceSet test_source_set = 3; // required
    repeated JavaSourceSet extra_source_sets = 4;
    optional string java_language_level = 5; // required
}

message JavaSourceSet {
    optional string name = 1; // required
    repeated File source_directories = 2;
    repeated File resources_directories = 3;
    optional File classes_output_directory = 4; // required
    optional File resources_output_directory = 5; // required
    repeated JavaLibrary library_dependencies = 6;
    repeated ModuleDependency module_dependencies = 7;
}